# gentoo

./: .editorconfig  .gitignore  .mailmap  .travis.yml  1q  HOWTO  Manifest  README.md  glsa-200310-03.xml  glsa-200310-04.xml  glsa-200311-01.xml  glsa-200311-02.xml  glsa-200311-03.xml  glsa-200311-04.xml  glsa-200311-05.xml  glsa-200311-06.xml  glsa-200311-07.xml  glsa-200311-08.xml  glsa-200312-01.xml  glsa-200312-03.xml  glsa-200312-04.xml  glsa-200312-05.xml  glsa-200312-06.xml  glsa-200312-07.xml  glsa-200312-08.xml  glsa-200401-01.xml  glsa-200401-02.xml  glsa-200401-03.xml  glsa-200401-04.xml  glsa-200402-01.xml  glsa-200402-02.xml  glsa-200402-03.xml  glsa-200402-04.xml  glsa-200402-05.xml  glsa-200402-06.xml  glsa-200402-07.xml  glsa-200403-01.xml  glsa-200403-02.xml  glsa-200403-03.xml  glsa-200403-04.xml  (+2795 more)
.github/: FUNDING.yml  pull_request_template.md
2009-04-06-tetex/: 2009-04-06-tetex.en.txt.asc
2009-10-08-gnome-226/: 2009-10-08-gnome-226.en.txt
2010-03-25-python-3.1/: 2010-03-25-python-3.1.en.txt  2010-03-25-python-3.1.en.txt.asc
2011-10-15-libpng15/: 2011-10-15-libpng15.en.txt.asc
2012-05-21-portage-config-protect-if-modified/: 2012-05-21-portage-config-protect-if-modified.en.txt  2012-05-21-portage-config-protect-if-modified.en.txt.asc
2012-11-06-PYTHON_TARGETS-deployment/: 2012-11-06-PYTHON_TARGETS-deployment.en.txt.asc
2013-02-10-new-13-profiles/: 2013-02-10-new-13-profiles.en.txt.asc
2013-06-01-mysql-pbxt-dropped/: 2013-06-01-mysql-pbxt-dropped.en.txt  2013-06-01-mysql-pbxt-dropped.en.txt.asc
2013-06-07-portage-preserve-libs-default/: 2013-06-07-portage-preserve-libs-default.en.txt
2013-09-22-minor-arches-1/: 2013-09-22-minor-arches-1.en.txt
2014-01-31-catalyst-head-changes/: 2014-01-31-catalyst-head-changes.en.txt  2014-01-31-catalyst-head-changes.en.txt.asc
2014-02-25-udev-upgrade/: 2014-02-25-udev-upgrade.en.txt.asc
2014-03-16-ruby-1_8-removal/: 2014-03-16-ruby-1_8-removal.en.txt
2014-06-03-upower-loses-hibernate-suspend-to-systemd/: 2014-06-03-upower-loses-hibernate-suspend-to-systemd.en.txt
2014-06-15-gcc48_ssp/: 2014-06-15-gcc48_ssp.en.txt.asc
2014-07-17-dhcpcd_6.4.2_changes_defaults_for_ipv6/: 2014-07-17-dhcpcd_6.4.2_changes_defaults_for_ipv6.en.txt.asc
2014-10-22-mythtv-schedulesdirect-change/: 2014-10-22-mythtv-schedulesdirect-change.en.txt.asc
2014-11-25-bash-completion-2_1-r90/: 2014-11-25-bash-completion-2_1-r90.en.txt
2015-02-02-nfs-service-changes/: 2015-02-02-nfs-service-changes.en.txt
2015-02-04-portage-sync-changes/: 2015-02-04-portage-sync-changes.en.txt
2015-03-28-true-multilib/: 2015-03-28-true-multilib.en.txt.asc
2015-07-28-mysql-packaging-changes/: 2015-07-28-mysql-packaging-changes.en.txt.asc
2015-08-26-ruby-19-removal/: 2015-08-26-ruby-19-removal.en.txt
2015-09-09-libvirt-init-script-changes/: 2015-09-09-libvirt-init-script-changes.en.txt
2015-10-21-future-support-of-hardened-sources-kernel/: 2015-10-21-future-support-of-hardened-sources-kernel.en.txt  2015-10-21-future-support-of-hardened-sources-kernel.en.txt.asc
2015-12-16-Python-ABIFLAGS-rebuild-needed/: 2015-12-16-Python-ABIFLAGS-rebuild-needed.en.txt
2015-12-16-python-abiflags-rebuild-needed/: 2015-12-16-python-abiflags-rebuild-needed.en.txt  2015-12-16-python-abiflags-rebuild-needed.en.txt.asc
2016-01-08-some-dhcpcd-hooks-are-now-examples/: 2016-01-08-some-dhcpcd-hooks-are-now-examples.en.txt  2016-01-08-some-dhcpcd-hooks-are-now-examples.en.txt.asc
2016-01-27-upgrading-to-apache-2.4/: 2016-01-27-upgrading-to-apache-2.4.en.txt
2016-04-07-kde-plasma5-stable/: 2016-04-07-kde-plasma5-stable.en.txt.asc
2016-04-24-default-video-cards/: 2016-04-24-default-video-cards.en.txt  2016-04-24-default-video-cards.en.txt.asc
2016-06-23-l10n-use_expand/: 2016-06-23-l10n-use_expand.en.txt.asc
2016-08-10-grub2_multislot_default/: 2016-08-10-grub2_multislot_default.en.txt  2016-08-10-grub2_multislot_default.en.txt.asc
app-arch/: metadata.xml
app-i18n/xvnkb/files/: 0.2.8a-putenv.patch  config.h.in  meson.build  meson.options  xvnkb-0.2.11-implicit-int.patch  xvnkb-0.2.11-ldflags.patch  xvnkb-0.2.8a.patch  xvnkb-0.2.9a-ldflags.patch  xvnkb-cc.patch
dev-games/newton/files/: CMakeLists.txt
dev-util/electron/files/toolchain/: BUILD.gn
mail-filter/libdkim/files/debianize/: Makefile.in  configure.ac  libdkim.pc.in  libdkim.ver
media-libs/icclib/files/: icclib-2.14-c23.patch  icclib-2.14-fno-common.patch  icclib-2.14-make.patch  meson-3.2.0.build  meson.build
sci-astronomy/wcstools/files/: Makefile.am  Makefile.libwcs.3.9.7.am  Makefile.libwcs.am  configure.ac  wcstools-3.8.3-autotools.patch  wcstools-3.8.4-implicits.patch  wcstools-3.8.4-overflows.patch  wcstools-3.9.2-RASortStars.patch  wcstools-3.9.2-additional_pointer_increase.patch  wcstools-3.9.2-compiler_warnings.patch  wcstools-3.9.2-ctype_copy_to_wcs.patch  wcstools-3.9.2-mayhem.patch  wcstools-3.9.2-off-by-one-allocation.patch  wcstools-3.9.2-spelling.patch  wcstools-3.9.2-sprintf.patch  wcstools-3.9.2-use_abort.patch  wcstools-3.9.2-wcsinit_crash.patch  wcstools-3.9.4-compiler-warning.patch  wcstools-3.9.4-fix-tests.patch  wcstools-3.9.4-haspm.patch  wcstools-3.9.4-spelling.patch  wcstools.pc.in
sci-biology/fasttree/files/: CMakeLists.txt  fasttree-2.1.11-format-security.patch  fasttree-2.1.7-format-security.patch  fasttree-2.1.8-format-security.patch
sci-biology/uchime/files/: CMakeLists.patch  CMakeLists.txt
sci-chemistry/pdbmat/files/: CMakeLists.txt
sci-chemistry/scala/files/: 3.3.18-gcc4.6.patch  Makefile.am  configure.ac
sci-libs/alglib/files/: CMakeLists.txt  CMakeLists.txt-3.20.0  CMakeLists.txt-3.8.2  alglib-3.10.0-disable-minlm-test.patch
sci-libs/neartree/files/: 2.1.4-test.patch  2.3.1-gentoo.patch  2.3.2-gentoo.patch  2.3.2-notest.patch  3.1.1-gentoo.patch  3.1.1-notest.patch  3.1.1-test.patch  CMakeLists.txt
sci-mathematics/diagrtb/files/: CMakeLists.txt
x11-plugins/wmmaiload/files/: meson.build  wmmaiload-2.2.1-checkthread.patch  wmmaiload-2.2.1-gtk.patch  wmmaiload-2.3.0-c23.patch  wmmaiload-2.3.0-fno-common.patch  wmmaiload-2.3.0-ssl.patch
(+632560 files in other folders)
