#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(scala, https://bugs.gentoo.org/)
AC_CONFIG_SRCDIR([scala.f])
AM_INIT_AUTOMAKE([foreign])

PKG_CHECK_MODULES([LAPACK],[lapack])

# Checks for programs.
AC_PROG_FC
AC_PROG_F77
AC_OUTPUT([Makefile])
